Glass and config
- Added glass
- Added config.json loading
- Threads are now configurable
- Added icons

--- a/Raytracer.vcxproj
+++ b/Raytracer.vcxproj
@@ -153,10 +153,18 @@
     <ClInclude Include="include\bitmap.hpp" />
     <ClInclude Include="include\camera.hpp" />
     <ClInclude Include="include\conmanip.h" />
+    <ClInclude Include="include\json.h" />
     <ClInclude Include="include\materials.hpp" />
     <ClInclude Include="include\object.hpp" />
     <ClInclude Include="include\raycast.hpp" />
     <ClInclude Include="include\vec3.hpp" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Raytracer.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
