--- a/Raytracer.vcxproj.filters
+++ b/Raytracer.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\shapes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Raytracer.rc">
